--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
 before_install:
   - docker build -t xavophonic/docker-react -f Dockerfile.dev .
 script:
-  - docker run -e CI=true  xavophonic/docker-react npm run test
+  - docker run xavophonic/docker-react npm run test -- --coverage
