added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,14 @@ before_install:
   - docker build -t xavophonic/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true xavophonic/docker-react npm run test -- --coverage
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-3"
+  app: "frontend"
+  env: "Frontend-dev"
+  bucket_name: "elasticbeanstalk-eu-west-3-992382828808"
+  bucket_path: "frontend"
+  on: 
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
